force-app/main/default/objects/VG_Exposure_Premium__c/VG_Exposure_Premium__c.object-meta.xml
<CustomObject>
    <label>Exposure Premium</label>
    <nameField>
        <label>Exposure Premium Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exposure Premiums</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>