force-app/main/default/objects/VG_Exposure_Premium__c/fields/VG_Factor_Name__c.field-meta.xml
<CustomField>
    <fullName>VG_Factor_Name__c</fullName>
    <label>Factor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>