force-app/main/default/objects/VG_Exposure_Premium__c/fields/VG_Other_Factor__c.field-meta.xml
<CustomField>
    <fullName>VG_Other_Factor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other Factor?</label>
    <type>Checkbox</type>
</CustomField>