force-app/main/default/objects/VG_Exposure_Premium__c/fields/VG_Rate__c.field-meta.xml
<CustomField>
    <fullName>VG_Rate__c</fullName>
    <label>Rate</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>